add basic Argo CD self deployment

--- a/k8s-deployments/_overlays/contabo3/kustomization.yaml
+++ b/k8s-deployments/_overlays/contabo3/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - ../../cluster-management/_overlays/contabo3
   - ../../applications/_overlays/contabo3
+  - appproject-contabo3.yaml
+  - application-contabo3.yaml
