--- a/k8s-deployments/_overlays/contabo3/application-contabo3.yaml
+++ b/k8s-deployments/_overlays/contabo3/application-contabo3.yaml
@@ -1,7 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kustomize-example
+  name: cluster-management
+  namespace: argocd
 spec:
   project: default
   source:
