--- a/k8s-deployments/cluster-management/external-secrets/base/application-external-secrets-operator.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/application-external-secrets-operator.yaml
@@ -8,6 +8,10 @@ spec:
   destination:
     server: "https://kubernetes.default.svc"
     namespace: *namespace
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
   source:
     repoURL: https://charts.external-secrets.io
     chart: external-secrets
