fix namespace of Argo CD Application for external secrets operator

--- a/k8s-deployments/cluster-management/external-secrets/base/application-external-secrets-operator.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/application-external-secrets-operator.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: external-secrets
-  namespace: &namespace external-secrets
+  name: external-secrets-operator
+  namespace: argocd
 spec:
   project: cluster-management
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: *namespace
+    namespace: external-secrets
   syncPolicy:
     automated:
       prune: true
