renamed the argo cd application folder
to be consistent with the new ApplicationSet

--- a/k8s-deployments/_overlays/contabo3/applicationset.yaml
+++ b/k8s-deployments/_overlays/contabo3/applicationset.yaml
@@ -9,7 +9,7 @@ spec:
     - list:
         elements:
           - group: cluster-management
-            name: argo-cd
+            name: argocd
           - cluster: cluster-management
             name: external-secrets
   template:
