--- a/k8s-deployments/_overlays/contabo3/applicationset.yaml
+++ b/k8s-deployments/_overlays/contabo3/applicationset.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: cluster-applications
+  namespace: argocd
 spec:
   goTemplate: true
   goTemplateOptions: ["missingkey=error"]
