fix property in ApplicationSet

--- a/k8s-deployments/_overlays/contabo3/applicationset.yaml
+++ b/k8s-deployments/_overlays/contabo3/applicationset.yaml
@@ -11,7 +11,7 @@ spec:
         elements:
           - group: cluster-management
             name: argocd
-          - cluster: cluster-management
+          - group: cluster-management
             name: external-secrets
   template:
     metadata:
