create dedicated AppProject for the Helm chart of the external secrets operator

--- a/k8s-deployments/cluster-management/external-secrets/base/application-external-secrets-helm.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/application-external-secrets-helm.yaml
@@ -1,10 +1,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: external-secrets-operator
+  name: external-secrets-helm
   namespace: argocd
 spec:
-  project: cluster-management
+  project: external-secrets-helm
   destination:
     server: "https://kubernetes.default.svc"
     namespace: external-secrets
