--- a/k8s-deployments/cluster-management/external-secrets/base/kustomization.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/kustomization.yaml
@@ -4,3 +4,4 @@ kind: Kustomization
 resources:
   - namespace-external-secrets.yaml
   - application-external-secrets-helm.yaml
+  - appproject-external-secrets-helm.yaml
