--- a/k8s-deployments/cluster-management/external-secrets/base/appproject-external-secrets-helm.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/appproject-external-secrets-helm.yaml
@@ -13,6 +13,7 @@ spec:
     - server: "https://kubernetes.default.svc"
       namespace: external-secrets
   namespaceResourceWhitelist:
+    # these should be all vanilla K8s API scopes
     - group: ''
       kind: '*'
     - group: 'apps'
@@ -36,6 +37,6 @@ spec:
       kind: '*'
     - group: 'storage.k8s.io'
       kind: '*'
-  clusterResourceBlacklist:
-    - group: '*'
+  clusterResourceWhitelist:
+    - group: 'apiextensions.k8s.io'
       kind: '*'
