allow the Helm chart of the external secrets operator to Webhooks and ClusterRoles etc.

--- a/k8s-deployments/cluster-management/external-secrets/base/appproject-external-secrets-helm.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/appproject-external-secrets-helm.yaml
@@ -40,3 +40,7 @@ spec:
   clusterResourceWhitelist:
     - group: 'apiextensions.k8s.io'
       kind: '*'
+    - group: 'admissionregistration.k8s.io'
+      kind: '*'
+    - group: 'rbac.authorization.k8s.io'
+      kind: '*'
