enable server side apply for deployment of external secrets operator
as its CRDs are quite large, and we can't sync them without SSA

--- a/k8s-deployments/cluster-management/external-secrets/base/application-external-secrets-helm.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/application-external-secrets-helm.yaml
@@ -12,6 +12,8 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - ServerSideApply=true
   source:
     repoURL: https://charts.external-secrets.io
     chart: external-secrets
