display orphaned resources in all AppProjects

--- a/k8s-deployments/_overlays/contabo3/application-cluster-management.yaml
+++ b/k8s-deployments/_overlays/contabo3/application-cluster-management.yaml
@@ -12,6 +12,8 @@ spec:
   destination:
     namespace: default
     server: 'https://kubernetes.default.svc'
+  orphanedResources:
+    warn: false
   syncPolicy:
     automated:
       prune: true
