--- a/k8s-deployments/_overlays/contabo3/appproject-cluster-management.yaml
+++ b/k8s-deployments/_overlays/contabo3/appproject-cluster-management.yaml
@@ -16,6 +16,8 @@ spec:
   destinations:
     - namespace: '*'
       server: 'https://kubernetes.default.svc'
+  orphanedResources:
+    warn: false
   clusterResourceWhitelist:
     - group: '*'
       kind: '*'
