--- a/k8s-deployments/_overlays/contabo3/appproject-default.yaml
+++ b/k8s-deployments/_overlays/contabo3/appproject-default.yaml
@@ -7,6 +7,8 @@ spec:
   sourceRepos: []
   sourceNamespaces: []
   destinations: []
+  orphanedResources:
+    warn: false
   namespaceResourceBlacklist:
     - group: '*'
       kind: '*'
