--- a/k8s-deployments/cluster-management/external-secrets/base/appproject-external-secrets-helm.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/appproject-external-secrets-helm.yaml
@@ -12,6 +12,8 @@ spec:
   destinations:
     - server: "https://kubernetes.default.svc"
       namespace: external-secrets
+  orphanedResources:
+    warn: false
   namespaceResourceWhitelist:
     # these should be all vanilla K8s API scopes
     - group: ''
