use Scaleway instead of Github to store secrets
as secrets stored on Github turned out to be only writable and not readable

--- a/k8s-deployments/cluster-management/external-secrets/_overlays/contabo3/externalsecret-test.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/_overlays/contabo3/externalsecret-test.yaml
@@ -5,11 +5,12 @@ metadata:
   name: test
 spec:
   secretStoreRef:
-    name: github
     kind: ClusterSecretStore
+    name: scaleway
   target:
     name: test
   data:
-    - secretKey: test
+    - secretKey: 'test'
       remoteRef:
-       key: TEST_SECRET
+       key: 'name:contabo3'  # the name of the secret
+       property: 'test-key'  # the key in the secret since our secret is a key-value store
