add deployment of OpenEBS
as a storage provider using the local storage of the node

--- a/k8s-deployments/_overlays/contabo3/applicationset.yaml
+++ b/k8s-deployments/_overlays/contabo3/applicationset.yaml
@@ -13,6 +13,8 @@ spec:
             name: argocd
           - group: cluster-management
             name: external-secrets
+          - group: cluster-management
+            name: openebs
   template:
     metadata:
       name: '{{.name}}'
