enable dpeloyment of cluster scope resources in storage.k8s.io

--- a/k8s-deployments/cluster-management/external-secrets/base/appproject-external-secrets-helm.yaml
+++ b/k8s-deployments/cluster-management/external-secrets/base/appproject-external-secrets-helm.yaml
@@ -46,3 +46,5 @@ spec:
       kind: '*'
     - group: 'rbac.authorization.k8s.io'
       kind: '*'
+    #- group: 'storage.k8s.io'
+    #  kind: '*'
